--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "ol-ext": "^3.1.8",
     "vue": "^2.6.10",
+    "vue-filter-date-format": "^1.3.1",
+    "vue-ls": "^3.2.1",
     "vuelayers": "^0.11.21"
   },
   "devDependencies": {
