--- a/src/.env
+++ b/src/.env
@@ -3,7 +3,7 @@ export const config = {
     apiKey: "dkdywe_w278",
     clientId: "1827373mf"
   },
-  //apiUrl: "https://geo.multifaceted.info/api",
+  //apiUrl: "/api",
   apiUrl: "http://localhost:5444/api",
 }
 
