--- a/src/.env
+++ b/src/.env
@@ -3,8 +3,8 @@ export const config = {
     apiKey: "dkdywe_w278",
     clientId: "1827373mf"
   },
-  //apiUrl: "/api",
-  apiUrl: "http://localhost:5444/api",
+  apiUrl: "/api",
+  //apiUrl: "http://localhost:5444/api",
 }
 
 export const defaultCoords = {
