--- a/src/.env
+++ b/src/.env
@@ -3,8 +3,8 @@ export const config = {
     apiKey: "dkdywe_w278",
     clientId: "1827373mf"
   },
-  // apiUrl: "https://geo.multifaceted.info/api",
-  apiUrl: "http://localhost:5445/api",
+  apiUrl: "https://geo.multifaceted.info/api",
+  // apiUrl: "http://localhost:5445/api",
 }
 
 export const defaultCoords = {
